2011-03-15  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-int.el (gnus-open-server): Ditto.

	* gnus-start.el (gnus-activate-group): Give a backtrace if
	debug-on-quit is set and the user hits `C-g'.
	(gnus-read-active-file): Ditto.

	* gnus-group.el (gnus-group-read-ephemeral-group): Ditto.

2011-03-15  Teodor Zlatanov  <tzz@lifelogs.com>

	* message.el (message-yank-original): Use cond instead of CL case.

2011-03-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lpath.el: Fbind read-char-choice for XEmacs.

2011-03-13  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el (auth-source-netrc-create): Show the default in the
	prompt when prompting for token creation.

2011-03-12  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el (auth-source-format-prompt): Always convert the value
	to a string to avoid evaluating non-string arguments.
	(auth-source-netrc-create): Offer default properly, not as initial
	content in `read-string'.
	(auth-source-netrc-saver): Use a cache keyed by file name and MD5 hash
	of line to determine if we've been run before.  If so, don't run again,
	but print a trivial message to indicate the cache was hit instead.

2011-03-11  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-sync.el (gnus-sync-install-hooks, gnus-sync-unload-hook): Don't
	install `gnus-sync-read' to any hooks by default.  It's buggy.  The
	user will have to run `gnus-sync-read' manually and wait for Cloudy
	Gnus.

2011-03-11  Julien Danjou  <julien@danjou.info>

	* mm-uu.el (mm-uu-type-alist): Add support for diff starting with "===
	modified file".

2011-03-09  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el (auth-source-read-char-choice): New function to read a
	character choice using `dropdown-list', `read-char-choice', or
	`read-char'.  It appends "[a/b/c] " to the prompt if the choices were
	'(?a ?b ?c).  The `dropdown-list' support is disabled for now.  Use
	`eval-when-compile' to load `dropdown-list'.  Remove `dropdown-list'.