@@ -5848,13 +5848,13 @@ If SELECT-ARTICLES, only select those articles from GROUP."
 			 (input
 			  (read-string
 			   (format
-			    "How many articles from %s (%s %d): "
-			    (gnus-group-decoded-name gnus-newsgroup-name)
-			    (if initial "max" "default")
-			    number)
-			   (if initial
-			       (cons (number-to-string initial)
-				     0)))))
+			    "How many articles from %s (available %d, default %d): "
+			    (gnus-group-decoded-name (gnus-group-real-name gnus-newsgroup-name))
+			    number
+			    (or initial gnus-large-newsgroup))
+			   nil
+			   nil
+			   (number-to-string (or initial gnus-large-newsgroup)))))
 		    (if (string-match "^[ \t]*$" input) number input)))
 		 ((and (> scored marked) (< scored number)
 		       (> (- scored number) 20))
@@ -5862,7 +5862,7 @@ If SELECT-ARTICLES, only select those articles from GROUP."
 			 (read-string
 			  (format "%s %s (%d scored, %d total): "
 				  "How many articles from"
-				  (gnus-group-decoded-name group)
+				  (gnus-group-decoded-name (gnus-group-real-name gnus-newsgroup-name))
 				  scored number))))
 		    (if (string-match "^[ \t]*$" input)
 			number input)))
